# dnd-initiative-tracker

./: .gitignore  README.md  go.mod  pyproject.toml
cmd/dnd-initiative-tracker/: main.go
internal/tracker/: app.go  app_test.go  http.go  http_test.go  initiative.go  initiative_test.go  namegen.go  repository.go  repository_test.go  types.go
internal/tracker/web/: app.js  home.html  player-list.html  saves.html  setup.html  styles.css
src/dnd_initiative_tracker/: __init__.py  __main__.py  app.py  index.html  initiative.py  models.py  storage.py
src/dnd_initiative_tracker/frontend/: app.js  combat.html  npc-list.html  styles.css
tests/: test_app.py  test_initiative.py  test_storage.py
