[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-initiative-tracker"
version = "0.1.0"
description = "Web-based initiative tracker for DnD encounters"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
dnd-initiative-tracker = "dnd_initiative_tracker.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-p no:cacheprovider --basetemp=.pytest_tmp"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
